fix header on mobile

--- a/resumesite/resumesitehtml/blog/test.css
+++ b/resumesite/resumesitehtml/blog/test.css
@@ -13,7 +13,22 @@ body{
     text-align: center;
     line-height: 60px;
     margin-bottom: 20px;
+    position: relative;
         
+}
+@media screen and (max-width: 600px) {
+    .thomasbaldockheader{
+        font-family: 'Playfair Display', serif;
+        font-weight: 900;
+        font-size: 60px;
+        text-transform: uppercase;
+        display: inline-block;
+        text-align: center;
+        line-height: 60px;
+        margin-bottom: 20px;
+        position: relative;
+            
+    }
 }
 p{
     margin-top: 0;
